kubernetes/apps/default/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: internal
  rules:
    - host: emqx.${SECRET_DOMAIN}
      annotations:
        hajimari.io/appName: EMQX
        hajimari.io/icon: mdi:quality-medium
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
